--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "webpack --mode=development && webpack serve",
+    "build": "webpack --mode=production",
+    "dev-server": "webpack serve",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -55,11 +56,13 @@
     "html-webpack-plugin": "^5.5.0",
     "image-webpack-loader": "^8.1.0",
     "prettier": "^2.6.2",
+    "react-svg-loader": "^3.0.3",
     "regenerator-runtime": "^0.13.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "url-loader": "^4.1.1",
     "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1"
+    "webpack-cli": "4.9.1",
+    "webpack-dev-server": "4.5.0"
   }
 }
